test2/apache.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: apache
  labels:
    app: apache
spec:
  replicas: 1
  selector:
    matchLabels:
      app: apache
  template:
    metadata:
      name: apache
      labels:
        app: apache
    spec:
      containers:
        - name: apache
          image: quay.io/centos7/httpd-24-centos7
          imagePullPolicy: IfNotPresent
      restartPolicy: Always
