test2/route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: apache-route
spec:
  host: test-gitops-apache.apps.cluster03.ocp.nutanix.its4u-group.com
  to:
    kind: Service
    name: apache-service
  port:
    targetPort: 8080
  tls:
    termination: reencrypt
    insecureEdgeTerminationPolicy: Allow
